samples/_failures_safe/1761539060_2d6c9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87b1b767.c: In function ‘main’:
./samples/SAFE/__tmp_87b1b767.c:153:12: error: missing terminating " character
  153 |     printf("Enter search keyword:
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_87b1b767.c:153:5: error: expected expression at end of input
  153 |     printf("Enter search keyword:
      |     ^~~~~~
./samples/SAFE/__tmp_87b1b767.c:153:5: error: expected declaration or statement at end of input
